--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,16 +16,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+:root {
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
-body {
+.dark body{
   color: var(--foreground);
   background: var(--background);
+  overflow-wrap: anywhere;
+}
+.light body{
+  color: var(--background);
+  background: var(--foreground);
   overflow-wrap: anywhere;
 }
 button,
